Do not set the default charset to nsIMsgWindow if forward inline or edit as new, bug 155253, r=ducarroz, sr=bienvenu.